k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-consumer
  labels:
    app: book-consumer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: book-consumer
  template:
    metadata:
      labels:
        app: book-consumer
    spec:
      containers:
      - name: book-consumer
        image: book-consumer:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 4000
