k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-consumer-service
spec:
  selector:
    app: book-consumer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
